tests/baselines/reference/underscoreThisInDerivedClass02.errors.txt
tests/cases/compiler/underscoreThisInDerivedClass02.ts(14,5): error TS2377: Constructors for derived classes must contain a 'super' call.


==== tests/cases/compiler/underscoreThisInDerivedClass02.ts (1 errors) ====
    // @target es5
    
    // Original test intent:
    // Errors on '_this' should be reported in derived constructors,
    // even if 'super()' is not called.
    
    class C {
        constructor() {
            return {};
        }
    }
    
    class D extends C {
        constructor() {
        ~~~~~~~~~~~~~~~
            var _this = "uh-oh?";
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS2377: Constructors for derived classes must contain a 'super' call.
    }